# machine_setup

./: README.md  aliases  alt_prompt.py  i3_config  i3status_config  init.lua  p10k_config  prompt.py  pyproject.toml  shell_functions.sh  zshconfig
scripts/: fix_monitors.sh  onedrive_sync.sh
