[project]
name = "machine_setup"
version = "0.1.0"
description = "A Python project for machine setup."
authors = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools]
packages = ["machine_setup"]

[project.urls]
Homepage = "https://github.com/brasmussen117/machine_setup"

[tool.black]
line-length = 120
